feat: 사각형 100개 생성후 사각형 버튼 맨 앞에 오도록 설정

--- a/DrawingAppGucci/DrawingApp/Base.lproj/Main.storyboard
+++ b/DrawingAppGucci/DrawingApp/Base.lproj/Main.storyboard
@@ -18,6 +18,8 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lwj-Gd-drK">
                                 <rect key="frame" x="550" y="685" width="80" height="80"/>
+                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                <color key="tintColor" systemColor="labelColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="사각형"/>
                                 <connections>
@@ -46,6 +48,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="rectangleButton" destination="lwj-Gd-drK" id="qEH-nL-GQt"/>
                         <outlet property="statusView" destination="wEe-lM-fZ5" id="7FD-Fz-mtZ"/>
                     </connections>
                 </viewController>
@@ -55,6 +58,12 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
