--- a/DrawingAppGucci/DrawingApp/Base.lproj/Main.storyboard
+++ b/DrawingAppGucci/DrawingApp/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="사각형"/>
                                 <connections>
-                                    <action selector="addRectangleTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wBv-to-Cjc"/>
+                                    <action selector="touchedRectangleButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="A0c-fU-Wt3"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wEe-lM-fZ5">
