--- a/DrawingAppGucci/DrawingApp/Source/Canvas/View/Base.lproj/Main.storyboard
+++ b/DrawingAppGucci/DrawingApp/Source/Canvas/View/Base.lproj/Main.storyboard
@@ -321,12 +321,12 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="SfJ-tN-geC">
-                                <rect key="frame" x="488.5" y="650" width="203" height="100"/>
+                                <rect key="frame" x="437" y="650" width="306" height="100"/>
                                 <subviews>
                                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hd1-0h-Dn1">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="8hO-wp-mUG"/>
+                                            <constraint firstAttribute="width" constant="100" id="8hO-wp-mUG"/>
                                             <constraint firstAttribute="height" constant="100" id="cFb-qr-CLv"/>
                                         </constraints>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -347,6 +347,15 @@
                                         <buttonConfiguration key="configuration" style="gray" title="사각형"/>
                                         <connections>
                                             <action selector="touchedRectangleButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="A0c-fU-Wt3"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nfA-1K-a2l">
+                                        <rect key="frame" x="206" y="0.0" width="100" height="100"/>
+                                        <color key="tintColor" systemColor="labelColor"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="gray" title="텍스트"/>
+                                        <connections>
+                                            <action selector="touchedTextButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xzH-mo-U1i"/>
                                         </connections>
                                     </button>
                                 </subviews>
